--- a/index.html
+++ b/index.html
@@ -2324,7 +2324,7 @@
 
         <!-- Player Comparison -->
         <div class="player-comparison">
-            <h2>⭐ CHARGER STARS TO WATCH ⭐</h2>
+            <h2>⭐ IMPACT PLAYERS TO WATCH ⭐</h2>
             <div class="players-grid">
                 <div class="player-card acgc-player">
                     <div class="player-name">Joe Crawford #4</div>
