--- a/index.html
+++ b/index.html
@@ -2204,16 +2204,16 @@
                         <span class="factor-text">ACGC rushing dominance: 4.5x more yards than Central Decatur</span>
                     </div>
                     <div class="factor">
-                        <span class="factor-icon">🏠</span>
-                        <span class="factor-text">Home field advantage + perfect weather conditions</span>
+                        <span class="factor-icon">🛡️</span>
+                        <span class="factor-text">Defensive pressure: ACGC creates 7.8 TFL per game vs Central Decatur's 3.4 TFL per game</span>
                     </div>
                     <div class="factor">
                         <span class="factor-icon">⚡</span>
-                        <span class="factor-text">ACGC 5-0 momentum vs Central Decatur 2-3 record</span>
+                        <span class="factor-text">Scoring efficiency: ACGC scores every 63.3 yards vs Central Decatur's 105.9 yards</span>
                     </div>
                     <div class="factor">
-                        <span class="factor-icon">🎯</span>
-                        <span class="factor-text">Special teams edge: 100% FG accuracy vs 0%</span>
+                        <span class="factor-icon">🏃‍♂️</span>
+                        <span class="factor-text">Rushing dominance: ACGC averages 333 yards/game vs Central Decatur's 74 yards/game</span>
                     </div>
                 </div>
             </div>
